hook up post feed cell to tableview

--- a/NeighborLink/Posts.storyboard
+++ b/NeighborLink/Posts.storyboard
@@ -21,18 +21,33 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="yaL-gW-fBY">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="yaL-gW-fBY" customClass="PostsTableView" customModule="NeighborLink" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="64" width="375" height="595"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="qk7-nf-yZm" customClass="PostCell">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PostsTableViewCell" id="qk7-nf-yZm" customClass="PostsTableViewCell" customModule="NeighborLink" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qk7-nf-yZm" id="ztd-wT-AAg">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zOB-ho-obU" customClass="PostView" customModule="NeighborLink" customModuleProvider="target">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="zOB-ho-obU" secondAttribute="bottom" id="3sQ-aF-kdl"/>
+                                                <constraint firstAttribute="trailing" secondItem="zOB-ho-obU" secondAttribute="trailing" id="XQa-QX-awX"/>
+                                                <constraint firstItem="zOB-ho-obU" firstAttribute="top" secondItem="ztd-wT-AAg" secondAttribute="top" id="aWr-k2-vaN"/>
+                                                <constraint firstItem="zOB-ho-obU" firstAttribute="leading" secondItem="ztd-wT-AAg" secondAttribute="leading" id="sd5-NO-GiK"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="postView" destination="zOB-ho-obU" id="4EP-Ya-58P"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -40,6 +55,9 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="kw2-65-aLb"/>
+                    <connections>
+                        <outlet property="tableView" destination="yaL-gW-fBY" id="hvP-a1-3JM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="y7P-0w-gND" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
