--- a/NeighborLink/Posts.storyboard
+++ b/NeighborLink/Posts.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="DSv-an-LN7">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="VW2-23-AgD">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -63,11 +63,13 @@
             </objects>
             <point key="canvasLocation" x="564" y="-24.7376311844078"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Posts-->
         <scene sceneID="rH1-wd-hy9">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="VW2-23-AgD" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Posts" image="posts_feed_icon" id="LSb-RF-iXu"/>
                     <toolbarItems/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Adb-7p-NQ3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -82,4 +84,7 @@
             <point key="canvasLocation" x="-375.19999999999999" y="-24.7376311844078"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="posts_feed_icon" width="24" height="24"/>
+    </resources>
 </document>
