add profile image with rounded corners

--- a/NeighborLink/PostView.xib
+++ b/NeighborLink/PostView.xib
@@ -12,6 +12,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PostView" customModule="NeighborLink" customModuleProvider="target">
             <connections>
                 <outlet property="contentView" destination="iN0-l3-epB" id="cSz-4H-8N7"/>
+                <outlet property="profileImage" destination="7QL-ZK-ReR" id="aUS-C2-is2"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
