--- a/NeighborLink/Profile.storyboard
+++ b/NeighborLink/Profile.storyboard
@@ -9,34 +9,49 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Profile View Controller-->
         <scene sceneID="pP4-rD-wpH">
             <objects>
-                <viewController id="CPe-Jv-ark" sceneMemberID="viewController">
+                <viewController id="CPe-Jv-ark" customClass="ProfileViewController" customModule="NeighborLink" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Ni3-eL-sPY"/>
                         <viewControllerLayoutGuide type="bottom" id="s4D-rF-kfd"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="gQo-51-U4s">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <view key="view" contentMode="scaleAspectFill" id="gQo-51-U4s">
+                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5eh-b6-qMq">
-                                <rect key="frame" x="163" y="308" width="50" height="50"/>
-                                <color key="backgroundColor" red="1" green="0.24015299479166666" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zcp-lZ-UMY">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile1" translatesAutoresizingMaskIntoConstraints="NO" id="cYf-be-zIL">
+                                        <rect key="frame" x="143" y="60" width="90" height="90"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="90" id="FcB-Iy-LeV"/>
+                                            <constraint firstAttribute="height" constant="90" id="KM4-jV-QJs"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.94509803921568625" green="0.92156862745098034" blue="0.52549019607843139" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="50" id="5eb-Ag-iuX"/>
-                                    <constraint firstAttribute="height" constant="50" id="mbV-Ov-bMO"/>
+                                    <constraint firstAttribute="bottom" secondItem="cYf-be-zIL" secondAttribute="bottom" constant="-30" id="3p8-cF-g18"/>
+                                    <constraint firstAttribute="height" constant="120" id="7xb-qi-bcv"/>
+                                    <constraint firstItem="cYf-be-zIL" firstAttribute="centerX" secondItem="zcp-lZ-UMY" secondAttribute="centerX" id="an5-Dg-FnH"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="5eh-b6-qMq" firstAttribute="centerY" secondItem="gQo-51-U4s" secondAttribute="centerY" id="4Du-8R-yha"/>
-                            <constraint firstItem="5eh-b6-qMq" firstAttribute="centerX" secondItem="gQo-51-U4s" secondAttribute="centerX" id="RAZ-oJ-F8G"/>
+                            <constraint firstItem="zcp-lZ-UMY" firstAttribute="top" secondItem="Ni3-eL-sPY" secondAttribute="bottom" id="ZRE-nl-zWB"/>
+                            <constraint firstItem="zcp-lZ-UMY" firstAttribute="leading" secondItem="gQo-51-U4s" secondAttribute="leading" id="wRV-eh-uDs"/>
+                            <constraint firstAttribute="trailing" secondItem="zcp-lZ-UMY" secondAttribute="trailing" id="zxi-5o-Sp7"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="dgJ-HM-O0H"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
+                    <connections>
+                        <outlet property="profileImage" destination="cYf-be-zIL" id="xgD-ht-7Bq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3Cg-nv-oDV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -48,6 +63,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nzw-NV-dZb" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" tag="1" title="Profile" image="profile_icon" id="WyX-4o-21I"/>
                     <toolbarItems/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Xle-cP-j4o">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -64,6 +80,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="profile1" width="144" height="130"/>
         <image name="profile_icon" width="20" height="20"/>
     </resources>
 </document>
