--- a/NeighborLink/Profile.storyboard
+++ b/NeighborLink/Profile.storyboard
@@ -21,9 +21,26 @@
                         <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="E6z-57-Ia2">
+                                <rect key="frame" x="0.0" y="120" width="375" height="483"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="eMU-jo-8OO">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="eMU-jo-8OO" id="5lI-zz-Za1">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zcp-lZ-UMY">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
                                 <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="city" translatesAutoresizingMaskIntoConstraints="NO" id="2Bx-ad-BSU">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
+                                    </imageView>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile1" translatesAutoresizingMaskIntoConstraints="NO" id="cYf-be-zIL">
                                         <rect key="frame" x="143" y="60" width="90" height="90"/>
                                         <constraints>
@@ -36,12 +53,20 @@
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="cYf-be-zIL" secondAttribute="bottom" constant="-30" id="3p8-cF-g18"/>
                                     <constraint firstAttribute="height" constant="120" id="7xb-qi-bcv"/>
+                                    <constraint firstItem="2Bx-ad-BSU" firstAttribute="top" secondItem="zcp-lZ-UMY" secondAttribute="top" id="Bul-9I-6qe"/>
                                     <constraint firstItem="cYf-be-zIL" firstAttribute="centerX" secondItem="zcp-lZ-UMY" secondAttribute="centerX" id="an5-Dg-FnH"/>
+                                    <constraint firstItem="2Bx-ad-BSU" firstAttribute="leading" secondItem="zcp-lZ-UMY" secondAttribute="leading" id="usO-gn-Cc7"/>
+                                    <constraint firstAttribute="bottom" secondItem="2Bx-ad-BSU" secondAttribute="bottom" id="v6v-ip-mM3"/>
+                                    <constraint firstAttribute="trailing" secondItem="2Bx-ad-BSU" secondAttribute="trailing" id="xcu-ei-MmE"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="E6z-57-Ia2" firstAttribute="top" secondItem="zcp-lZ-UMY" secondAttribute="bottom" id="HpU-e1-HqW"/>
+                            <constraint firstAttribute="trailing" secondItem="E6z-57-Ia2" secondAttribute="trailing" id="Lg1-jh-Xb7"/>
+                            <constraint firstItem="s4D-rF-kfd" firstAttribute="top" secondItem="E6z-57-Ia2" secondAttribute="bottom" id="Qsc-4p-se0"/>
+                            <constraint firstItem="E6z-57-Ia2" firstAttribute="leading" secondItem="gQo-51-U4s" secondAttribute="leading" id="QxN-yJ-RvC"/>
                             <constraint firstItem="zcp-lZ-UMY" firstAttribute="top" secondItem="Ni3-eL-sPY" secondAttribute="bottom" id="ZRE-nl-zWB"/>
                             <constraint firstItem="zcp-lZ-UMY" firstAttribute="leading" secondItem="gQo-51-U4s" secondAttribute="leading" id="wRV-eh-uDs"/>
                             <constraint firstAttribute="trailing" secondItem="zcp-lZ-UMY" secondAttribute="trailing" id="zxi-5o-Sp7"/>
@@ -50,7 +75,10 @@
                     <navigationItem key="navigationItem" id="dgJ-HM-O0H"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                     <connections>
+                        <outlet property="headerHeightConstraint" destination="7xb-qi-bcv" id="cVO-ry-4TJ"/>
+                        <outlet property="imageView" destination="2Bx-ad-BSU" id="Zdd-yh-ZxN"/>
                         <outlet property="profileImage" destination="cYf-be-zIL" id="xgD-ht-7Bq"/>
+                        <outlet property="tableView" destination="E6z-57-Ia2" id="0SE-Nn-KOH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3Cg-nv-oDV" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -60,16 +88,18 @@
         <!--Profile-->
         <scene sceneID="jbV-h0-UnT">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nzw-NV-dZb" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="nzw-NV-dZb" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" tag="1" title="Profile" image="profile_icon" id="WyX-4o-21I"/>
                     <toolbarItems/>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics"/>
-                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Xle-cP-j4o">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" translucent="NO" id="Xle-cP-j4o">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="6We-JP-TW3">
+                        <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
                     <connections>
                         <segue destination="CPe-Jv-ark" kind="relationship" relationship="rootViewController" id="0su-Vx-XSB"/>
                     </connections>
@@ -80,6 +110,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="city" width="375" height="120"/>
         <image name="profile1" width="144" height="130"/>
         <image name="profile_icon" width="20" height="20"/>
     </resources>
